[tool.poetry]
name = "lnst"
version = "16.0.0"
homepage = "http://lnst-project.org"
license = "GPL-2.0-or-later"
readme = "README.md"
repository = "https://github.com/LNST-project/lnst"
description = "Linux Network Stack Test"
authors = ["LNST Team <lnst-developers@lists.fedorahosted.org>"]
maintainers = ["Ondrej Lichtner <olichtne@redhat.com>", "Jan Tluka <jtluka@redhat.com>",
    "Jozef Urbanovsky <jurbanov@redhat.com>", "Perry Gagne <pgagne@redhat.com>", "Jiri Pirko <jiri@resnulli.us>"]

packages = [
    { include = "lnst"}
]

include = ["schema-sm.rng", "install/*", "lnst-ctl.conf"]

[tool.poetry.dependencies]
python = "^3.6"

pyroute2 = "*"
pyyaml = "*"
lxml = "*"
libvirt-python = "*"
ethtool = "*"
dataclasses = "*"
podman = "*"

[tool.poetry.scripts]
lnst-agent = 'lnst.Agent.__main__:main'

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
filterwarnings = [
    'ignore:function ham\(\) is deprecated:DeprecationWarning',
]
