[tool.poetry]
name = "lnst"
version = "16.1.0"
homepage = "http://lnst-project.org"
license = "GPL-2.0-or-later"
readme = "README.md"
repository = "https://github.com/LNST-project/lnst"
description = "Linux Network Stack Test"
authors = ["LNST Team <lnst-developers@lists.fedorahosted.org>"]
maintainers = ["Ondrej Lichtner <olichtne@redhat.com>", "Jan Tluka <jtluka@redhat.com>",
    "Jozef Urbanovsky <jurbanov@redhat.com>", "Perry Gagne <pgagne@redhat.com>", "Jiri Pirko <jiri@resnulli.us>"]

packages = [
    { include = "lnst"}
]

include = ["schema-am.rng", "install/*", "lnst-ctl.conf"]

[tool.poetry.dependencies]
python = "^3.9"
lxml = "*"
ethtool = "*"
pyroute2 = "*"

libvirt-python = {version = "*", optional = true }
podman = {version = "*", optional = true }
cryptography = {version = "*", optional = true }
pyyaml = {version = "*", optional = true}

[tool.poetry.extras]
virt = ["libvirt-python"]
containers = ["podman"]
sec_socket = ["cryptography"]
trex = ["pyyaml"]


[tool.poetry.scripts]
lnst-agent = 'lnst.Agent.__main__:main'

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
filterwarnings = [
    'ignore:function ham\(\) is deprecated:DeprecationWarning',
]
