[project]
name = "lnst"
version = "16.1.0"
description = "Linux Network Stack Test"
authors = [{ name = "LNST Team", email = "lnst-developers@lists.fedorahosted.org" }]
requires-python = ">=3.13"
readme = "README.md"
license = "GPL-2.0-or-later"
maintainers = [
    { name = "Ondrej Lichtner", email = "olichtne@redhat.com" },
    { name = "Jan Tluka", email = "jtluka@redhat.com" },
    { name = "Jozef Urbanovsky", email = "jurbanov@redhat.com" },
    { name = "Perry Gagne", email = "pgagne@redhat.com" },
    { name = "Jiri Pirko", email = "jiri@resnulli.us" },
]
dependencies = [
    "lxml",
    "ethtool",
    "pyroute2",
    "psutil>=5.9.4",
    "requests>=2.30.0",
    "setuptools<81",
]

[project.optional-dependencies]
virt = ["libvirt-python"]
containers = ["podman"]
sec_socket = ["cryptography"]
trex = ["pyyaml"]

[project.urls]
Homepage = "http://lnst-project.org"
Repository = "https://github.com/LNST-project/lnst"

[project.scripts]
lnst-agent = "lnst.Agent.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "pylint>=3.2.2",
]

[tool.hatch.build.targets.sdist]
include = ["lnst"]

[tool.hatch.build.targets.sdist.force-include]
"schema-am.rng" = "lnst/schema-am.rng"
"install/lnst-agent.example.conf" = "install/lnst-agent.example.conf"
"install/lnst-agent.service" = "install/lnst-agent.service"
"lnst-ctl.conf" = "lnst-ctl.conf"

[tool.hatch.build.targets.wheel]
include = ["lnst"]

[tool.hatch.build.targets.wheel.force-include]
"schema-am.rng" = "lnst/schema-am.rng"
"install/lnst-agent.example.conf" = "install/lnst-agent.example.conf"
"install/lnst-agent.service" = "install/lnst-agent.service"
"lnst-ctl.conf" = "lnst-ctl.conf"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
filterwarnings = [
    'ignore:function ham\(\) is deprecated:DeprecationWarning',
]
